--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,15 +3,14 @@
     "name": "Contractly",
     "version": "1.0",
     "description": "Summarizes privacy policies automatically.",
-    "permissions": ["activeTab"],
+    "permissions": ["activeTab", "scripting", "storage"],
+    "host_permissions": ["https://*/*"],
     "background": {
-      "service_worker": "background.js"
-    },
-    "action": {
-      "default_popup": "popup.html"
+      "service_worker": "background.js",
+      "type": "module"
     },
     "content_scripts": [{
-      "matches": ["<all_urls>"],
+      "matches": ["https://*/*"],
       "js": ["content.js"]
     }]
   }
